--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -32,11 +32,13 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
 </h:head>
-<h:body>
+<h:body styleClass="">
 
-    <h:form styleClass="w-1/2 mx-auto mt-4 border p-2">
+    <h:form styleClass="w-1/2 mx-auto mt-24 border p-12 bg-gray-60">
+        <h:graphicImage value="resources/images/sofa.png" />
+
         <div class="mb-6">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 white:text-white">Email address</label>
+            <label for="email" class="block mb-2 text-sm font-medium t                                                            ext-gray-900 white:text-white">Email address</label>
             <input type="text" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 white:bg-gray-700 white:border-gray-600 white:placeholder-gray-400 white:text-white white:focus:ring-blue-500 white:focus:border-blue-500" />
         </div>
         <div class="mb-6">
